--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ networkx==3.4.2
 numba==0.61.0
 numpy==2.1.3
 openai-whisper==20240930
+pydub==0.25.1
 regex==2024.11.6
 requests==2.32.3
 sympy==1.13.1
